--- a/Laba1/Laba1.vcxproj.filters
+++ b/Laba1/Laba1.vcxproj.filters
@@ -15,15 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Laba1.cpp">
+    <ClCompile Include="Integer.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Integer.cpp">
+    <ClCompile Include="Tests.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Integer.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="catch.hpp">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
